--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "rlog_dynamo"
 version = "0.1.0"
 edition = "2024"
+authors = ["brightstar8284@icloud.com"]
+repository = "https://github.com/StevenLianaL/rlog_dynamo"
+description = "To log with DynamoDB using rlog"
+license = "MIT"
+
+[lib]
+path = "src/lib.rs"
 
 [dependencies]
 tokio = { version = "1.47.0", features = ["full"] }
